[package]
name = "ecs_benchmarking"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Head-to-head Criterion benchmarks comparing freecs against bevy_ecs"
repository = "https://github.com/matthewjberger/ecs_benchmarking"
publish = false

# Enable to build the freecs_dyn column against freecs's contiguous raw
# storage backend instead of the default safe one, to compare the two:
#   cargo bench --bench benchmarks                     # freecs_dyn = safe storage
#   cargo bench --bench benchmarks --features raw_storage   # freecs_dyn = raw storage
# (needs a freecs that ships the raw_storage feature, e.g. 4.0 or a local patch.)
[features]
raw_storage = ["freecs/raw_storage"]

[dependencies]
freecs = { version = "3", features = ["dynamic"] }
bevy_ecs = "0.19"
bevy_tasks = "0.19"
sky_ecs = "0.1"
cgmath = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "experiment_iter"
harness = false

[[bench]]
name = "experiment_parallel"
harness = false

[[bin]]
name = "report"
path = "src/bin/report.rs"

[profile.bench]
lto = "thin"
codegen-units = 1
