[package]
name = "ecs_benchmarking"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Head-to-head Criterion benchmarks comparing freecs against bevy_ecs"
repository = "https://github.com/matthewjberger/ecs_benchmarking"
publish = false

# To compare freecs's default (safe) column storage against its opt-in
# contiguous `raw_storage` backend, point the freecs dependency below at a
# checkout that ships the feature (freecs 4.0+ or a local patch) and add the
# feature to the enabled list, then run the `freecs_dyn` benchmarks each way:
#   freecs = { version = "4", features = ["dynamic"] }               # safe storage
#   freecs = { version = "4", features = ["dynamic", "raw_storage"] } # raw storage
#   cargo bench --bench benchmarks -- freecs_dyn
# The freecs_dyn correctness tests pass identically under both, so any timing
# difference is pure storage-backend cost.
[dependencies]
freecs = { version = "3", features = ["dynamic"] }
bevy_ecs = "0.19"
bevy_tasks = "0.19"
sky_ecs = "0.1"
cgmath = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "experiment_iter"
harness = false

[[bench]]
name = "experiment_parallel"
harness = false

[[bin]]
name = "report"
path = "src/bin/report.rs"

[profile.bench]
lto = "thin"
codegen-units = 1
