[package]
name = "ecs_benchmarking"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Head-to-head Criterion benchmarks comparing freecs against bevy_ecs"
repository = "https://github.com/matthewjberger/ecs_benchmarking"
publish = false

# Compare freecs's default (safe) column storage against its opt-in contiguous
# `raw_storage` backend on the freecs_dyn column:
#   cargo bench --bench benchmarks -- freecs_dyn                    # safe storage
#   cargo bench --bench benchmarks --features raw_storage -- freecs_dyn  # raw storage
# The freecs_dyn correctness tests pass identically under both, but the timing
# difference is NOT purely the storage backend: `raw_storage` also swaps the
# registry's hasher and permanently disables change detection and the
# structural-change log. It is a bundle of changes, not one.
[features]
raw_storage = ["freecs/raw_storage"]

[dependencies]
freecs = { version = "4.7", features = ["dynamic"] }
bevy_ecs = "0.19"
bevy_tasks = "0.19"
sky_ecs = "0.1"
cgmath = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "experiment_iter"
harness = false

[[bench]]
name = "experiment_parallel"
harness = false

[[bin]]
name = "report"
path = "src/bin/report.rs"

[profile.bench]
lto = "thin"
codegen-units = 1
